# GameDevMind

./: .cursorrules.example  CLAUDE.md.example  CONTRIBUTING.md  INDEX.md  README.md  知乎文章参考.md
.cursor/plans/: 客户端3D场景开发_ai_coding.plan.md
ai-cases/: README.md  cpp-memory-pool.md  go-leaderboard-cache.md  unity-drawcall-optimization.md
cases/: README.md  drawcall-optimization.md  leaderboard-optimization.md  memory-leak-slg.md  network-reconciliation.md  server-deadlock.md
code/: README.md
code/1.基础能力/1.1.2.C++语言/memory_pool/: CMakeLists.txt  README.md  main.cpp  memory_pool.hpp
code/1.基础能力/1.1.2.C++语言/smart_pointer/: CMakeLists.txt  README.md  smart_pointer_demo.cpp
code/1.基础能力/1.2.1.设计模式/command/: CMakeLists.txt  README.md  command.hpp  command_queue.hpp  main.cpp
code/1.基础能力/1.2.1.设计模式/object_pool/: CMakeLists.txt  README.md  main.cpp  object_pool.hpp
code/1.基础能力/1.2.2.数据结构/quadtree/: CMakeLists.txt  README.md  main.cpp  quadtree.hpp
code/2.技术能力/2.2.1.网络与通信/network_sync/: CMakeLists.txt  README.md  build_and_test.sh  lockstep.cpp  state_sync.cpp
code/3.研发能力/3.1.2.客户端3D场景开发/hex_grid/: CMakeLists.txt  README.md  astar.hpp  hex_coord.hpp  hex_grid.hpp  main.cpp
mds/: x-1.开发技术.md  x-4.产品研发.md  游戏研运资产样例-SLG手游（2D）.md  阅读说明.md
mds/1.基础能力/: 1.1.1.编程语言基础概念.md  1.1.2.C++语言.md  1.1.3.C#语言.md  1.1.4.JS语言.md  1.1.5.编程语言综合.md  1.1.6.内存管理.md  1.1.7.编程语言高阶概念.md  1.1.编程语言.md  1.2.1.设计模式.md  1.2.2.数据结构.md  1.2.3.算法.md  1.2.4.代码重构.md  1.2.程序设计.md  1.3.1.数学.md  1.3.2.人工智能.md  1.3.3.操作系统.md  1.3.4.计算机组成原理.md  1.3.5.计算机网络.md  1.3.通用基础.md  1.基础能力.md
mds/2.技术能力/: 2.1.1.图形与渲染.md  2.1.2.物理.md  2.1.3.UI.md  2.1.4.声音.md  2.1.5.动画与特效.md  2.1.6.游戏引擎概念与应用.md  2.1.7.平台开发.md  2.1.客户端技术.md  2.2.1.网络与通信.md  2.2.2.数据库.md  2.2.3.服务端中间件.md  2.2.服务端技术.md  2.3.1.通用工具.md  2.3.2.客户端开发工具.md  2.3.3.服务端开发工具.md  2.3.4.设计工具.md  2.3.5.日常工具.md  2.3.开发者工具箱.md  2.技术能力.md
mds/3.研发能力/: 3.1.1.客户端底层通用系统.md  3.1.2.客户端3D场景开发.md  3.1.3.客户端优化.md  3.1.4.客户端网络系统.md  3.1.5.渲染与特效.md  3.1.6.UI系统.md  3.1.7.客户端中间件.md  3.1.客户端产品研发.md  3.2.1.服务端底层架构.md  3.2.2.网游网络同步.md  3.2.3.服务端优化.md  3.2.4.服务端基础功能.md  3.2.5.服务端业务架构.md  3.2.服务端产品研发.md  3.3.1.摄像机控制.md  3.3.2.角色.md  3.3.3.综合业务层功能.md  3.3.业务层功能.md  3.研发能力.md
mds/4.生产能力/: 4.1.1.数字内容生产.md  4.1.2.AI助力游戏生产.md  4.1.3.引擎的基本功能系统.md  4.1.4.引擎的其它系统.md  4.1.游戏生产.md  4.2.1.编辑器开发.md  4.2.2.工具开发与应用.md  4.2.3.游戏数据文件.md  4.2.工具开发.md  4.3.1.快速开发框架.md  4.3.2.技术支持.md  4.3.3.DevOps.md  4.3.技术中台.md  4.生产能力.md
mds/5.管理能力/: 5.1.1.系统开发工作流.md  5.1.2.UI制作工作流.md  5.1.3.更多开发工作流.md  5.1.工作流.md  5.2.1.代码质量管理.md  5.2.2.产品质量管理.md  5.2.3.技术债务管理.md  5.2.质量保障.md  5.3.1.项目里程.md  5.3.2.版本管理.md  5.3.3.SCRUM.md  5.3.4.团队与组织.md  5.3.5.团队管理.md  5.3.6.项目管理综合.md  5.3.项目管理.md  5.管理能力.md
mds/6.运营能力/: 6.1.1.网络维护.md  6.1.2.数据存储.md  6.1.3.资产管理.md  6.1.4.Linux系统.md  6.1.5.中间件运维.md  6.1.6.网络安全.md  6.1.运维技术.md  6.2.1.GM后台.md  6.2.2.数据统计分析.md  6.2.3.产品热更新.md  6.2.4.产品本地化.md  6.2.5.开发配合.md  6.2.6.AI助力游戏运营.md  6.2.7.LiveOps.md  6.2.产品运营支持.md  6.3.1.游戏安全.md  6.3.2.帐号与支付.md  6.3.3.第三方服务.md  6.3.4.产品合规.md  6.3.产品商业化.md  6.运营能力.md
mds/topics/: 游戏开发新人.md  游戏程序员职业发展路径.md
mds/一站式手游创业/: 4.1.客户端代码资产.md
nav/: index.html  panorama.html
